Improved index sidebar (#732)
* Fixed index in desktop view

* Highlight the current section being read in the index

* Code cleanups + add Methodology

* Use active style that was already defined

* Better way of ensuring current element is in the viewport

* Only set sticky when upgrading and also support prefers-reduced-motion

* Move index highlighter up above interactive visuals

* Add vendor prefix for Safari v12

* Code cleanup

* Add back incorrectly removed overflow

* Code refactor after review from @rviscomi

* Remove index-scroller element and revert smooth scroller

* Fix more code review issues

* Extra comment on scrollIntoView

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -45,6 +45,17 @@
 .index .index-box {
   margin: 20px 0;
   padding: 8px 16px;
+  top: 0;
+}
+
+.index .index-box.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.page-height {
+  max-height: 100vh;
+  overflow: auto;
 }
 .index .header {
   color: #1A2B49;
@@ -417,7 +428,12 @@ figure .fig-desktop {
     max-width: 100%;
     height: auto;
   }
-
+  .index .sticky {
+    position: static;
+  }
+  .index .index-box {
+    max-height: 100%;
+  }
 }
 
 /* Code highlighting */
