--- a/src/templates/base/2019/methodology.html
+++ b/src/templates/base/2019/methodology.html
@@ -17,7 +17,7 @@
         <button class="index-btn">{{ self.index_title() }}</button>
         <span class="no-button">{{ self.index_title() }}</span>
       </h2>
-        {{ self.index() }}
+      {{ self.index() }}
     </div>
   </nav>
 
@@ -31,4 +31,5 @@
 {% block scripts %}
 {{ super() }}
 {{ self.index_menu_script() }}
+<script src='/static/js/chapter.js?v=2' defer></script>
 {% endblock %}
