--- a/src/templates/en/2019/accessibility_statement.html
+++ b/src/templates/en/2019/accessibility_statement.html
@@ -25,13 +25,16 @@
 {% endblock %}
 
 {% block main_content %}
-        <h2 id="overview">Overview</h2>
+      <section>
+        <h2 id="overview"><a href="#overview" class="anchor-link">Overview</a></h2>
 
         <p>
           The Web Almanac is committed to ensuring digital accessibility for all people. We are continually improving the user experience for everyone and applying the relevant accessibility standards.
         </p>
-      
-        <h2 id="measures">Measures to support accessibility</h2>
+      </section>
+
+      <section>
+        <h2 id="measures"><a href="#measures" class="anchor-link">Measures to support accessibility</a></h2>
 
         <p>
           The Web Almanac takes the following measures to ensure accessibility of this website:
@@ -43,8 +46,10 @@
           <li>Address accessibility issues raised in a timely manner.</li>
           <li>Publish, and keep up to date, this accessibility statement.</li>
         </ul>
+      </section>
       
-        <h2 id="conformance-status">Conformance status</h2>
+      <section>
+        <h2 id="conformance-status"><a href="#conformance-status" class="anchor-link">Conformance status</a></h2>
 
         <p>
           The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG)</a> defines requirements for designers and developers to improve accessibility for people with disabilities. It defines three levels of conformance: Level A, Level AA, and Level AAA. The Web Almanac is partially conformant with <a href="https://www.w3.org/WAI/WCAG21/">WCAG 2.1</a> level AAA. Partially conformant means that some parts of the content do not fully conform to the accessibility standard.
@@ -66,13 +71,13 @@
           In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
         </p>
       
-        <h2 id="external-content">External content</h2>
+        <h2 id="external-content"><a href="#external-content" class="anchor-link">External content</a></h2>
 
         <p>
           Many chapters link to other content (videos, PDFs, articles) which are not under our control and which may not meet the high levels of conformance that we have achieved. Where possible, we will provide links to articles in the same language as the page being viewed, but this is not always possible.
         </p>
       
-        <h2 id="compatibility">Compatibility with browsers and assistive technology</h2>
+        <h2 id="compatibility"><a href="#compatibility" class="anchor-link">Compatibility with browsers and assistive technology</a></h2>
 
         <p>
           The Web Almanac is designed to be compatible with as many browsers and assistive technologies as possible. The website has been built in a progressive manner, and is fully functionality even without supporting all the modern browser features we use, but you may notice a deterioration in visuals, and lack of some functionality (interactive visuals, comment counts etc.) when not using a modern browser such as a recent version of Chrome, Safari, Firefox or Edge.
@@ -81,22 +86,29 @@
         <p>
           At this time, we have not completed testing in assistive technology hardware or software but have used tools, as mentioned above, to attempt to address any issues in these devices.
         </p>
+      </section>
       
-        <h2 id="technical-specifications">Technical Specifications</h2>
+      <section>
+        <h2 id="technical-specifications"><a href="#technical-specifications" class="anchor-link">Technical Specifications</a></h2>
         
         <p>
           The website is built on well structured, semantic HTML (including <a href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> where appropriate), enhanced with CSS for styling and limited JavaScript for some interactive components. The website makes use of modern development practices such as CSS Grid, Fetch, and WOFF2 Fonts, which are not supported in older browsers such as IE 11. The website is still fully functional in those browsers but may not be as visually appealing. No extra plugins or libraries should be required to view the website.
         </p>
+      </section>
       
-        <h2 id="assessment-approach">Assessment Approach</h2>
+      <section>
+        <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">Assessment Approach</a></h2>
         
         <p>
           Self-evaluation: the content was evaluated by the Web Almanac team using their own expertise and a number of tools including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>.
         </p>
+      </section>
       
-        <h2 id="feedback">Feedback</h2>
+      <section>
+        <h2 id="feedback"><a href="#feedback" class="anchor-link">Feedback</a></h2>
 
         <p>
           We welcome feedback on the accessibility of this website. The best ways to reach us would be to <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">raise an issue on GitHub</a> or email us at <a href="mailto:team@httparchive.org">team@httparchive.org</a>. We would also welcome pull requests for those that wish to contribute directly. The Web Almanac is a community based project, managed by volunteers, and so we cannot guarantee a time frame for responding to feedback but will respond as soon as possible.
         </p>
+      </section>
 {% endblock %}
