--- a/src/templates/fr/2019/methodology.html
+++ b/src/templates/fr/2019/methodology.html
@@ -53,7 +53,7 @@
           <source type="image/jpeg" srcset="/static/images/methodology-banner-sm.png" />
           <img src="/static/images/methodology-banner.png" class="content-banner" alt="" width="1200" height="984" loading="eager" />
         </picture>
-        <h2 id="overview">Vue d’ensemble</h2>
+        <h2 id="overview"><a href="#overview" class="anchor-link">Vue d’ensemble</a></h2>
 
         <p>
         Le Web Almanac est un projet élaboré par <a href="https://httparchive.org">HTTP Archive</a>. HTTP Archive a été lancé en 2010 par Steve Souders avec pour mission d’étudier la manière dont le web est construit. Il évalue la composition de millions de pages Web sur une base mensuelle et met à disposition ses téraoctets de métadonnées pour analyse sur <a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>. En savoir plus <a href="https://httparchive.org/about">à propos de HTTP Archive</a>.
@@ -69,7 +69,7 @@
     </section>
 
     <section>
-      <h2 id="dataset">À propos du jeu de données</h2>
+      <h2 id="dataset"><a href="#dataset" class="anchor-link">À propos du jeu de données</a></h2>
 
         <p>
         Le jeu de données HTTP Archive est continuellement mis à jour avec de nouvelles données mensuelles. Pour l’édition 2019 du Web Almanac, sauf indication contraire dans le chapitre, tous les paramètres ont été obtenus à partir de l’index de juillet 2019. Ces résultats sont <a href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">publiquement requêtables</a> sur BigQuery dans des tables préfixées par <code>2019_07_01</code>. 
@@ -111,7 +111,7 @@
     </section>
 
     <section>
-        <h3 id="websites">Sites Web</h3>
+        <h3 id="websites"><a href="#websites" class="anchor-link">Sites Web</a></h3>
 
         <p>
         Il y a 5&nbsp;790&nbsp;700 sites Web dans l’ensemble de données. Parmi ceux-ci, 5&nbsp;297&nbsp;442 sont des sites Web mobiles et 4&nbsp;371&nbsp;973 sont des sites Web destinés aux ordinateurs de bureau. La plupart des sites Web sont inclus dans les deux sous-ensembles à la fois.
@@ -135,7 +135,7 @@
     </section>
 
     <section>
-      <h3 id="metrics">Mesures</h3>
+      <h3 id="metrics"><a href="#metrics" class="anchor-link">Mesures</a></h3>
 
       <p>
         HTTP Archive collecte des indicateurs reflétant la manière dont le web est construit. Cette collecte inclut des mesures de base comme le nombre d’octets par page, si la page a été chargée en HTTPS ou non, et des en-têtes de requête et de réponse individuels. La majorité de ces indicateurs est fournie par <a href="#webpagetest">WebPageTest</a>, qui sert de test pour chaque site Web.
@@ -159,7 +159,7 @@
     </section>
 
     <section>
-      <h2 id="tools">Outils</h2>
+      <h2 id="tools"><a href="#tools" class="anchor-link">Outils</a></h2>
 
       <p>
         Le Web Almanac est rendu possible grâce aux outils open source suivants.
@@ -167,7 +167,7 @@
     </section>
 
     <section>
-      <h3 id="webpagetest">WebPageTest</h3>
+      <h3 id="webpagetest"><a href="#webpagetest" class="anchor-link">WebPageTest</a></h3>
 
       <p>
         <a href="https://www.webpagetest.org/">WebPageTest</a> est un outil de test de performance Web incontournable et l’épine dorsale de HTTP Archive. Nous utilisons une <a href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">instance privée</a> de WebPageTest avec des agents de test privés, c’est-à-dire de vrais navigateurs testant chaque page web. Les sites pour ordinateurs de bureau et périphériques mobiles sont testés avec différentes configurations&nbsp;:
@@ -247,7 +247,7 @@
     </section>
 
     <section>
-      <h3 id="lighthouse">Lighthouse</h3>
+      <h3 id="lighthouse"><a href="#lighthouse" class="anchor-link">Lighthouse</a></h3>
 
       <p>
         <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a> est un outil automatisé d’assurance qualité des sites Web construit par Google. Il vérifie les pages Web pour s’assurer qu’elles ne contiennent pas de mauvaises pratiques impactant l’expérience utilisateur comme des images non optimisées et du contenu inaccessible.
@@ -299,7 +299,7 @@
     </section>
 
     <section>
-      <h3 id="wappalyzer">Wappalyzer</h3>
+      <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
         <a href="https://www.wappalyzer.com/">Wappalyzer</a> est un outil de détection des technologies utilisées dans les pages Web. Il y a  <a href="https://www.wappalyzer.com/technologies">65 catégories</a> de technologies testées, allant des frameworks JavaScript, aux plates-formes CMS, en passant par les mineurs de cryptomonnaie. Plus de 1&nbsp;200 technologies sont prises en charge.
@@ -319,7 +319,7 @@
     </section>
 
     <section>
-      <h3 id="chrome-ux-report">Chrome UX Report</h3>
+      <h3 id="chrome-ux-report"><a href="#chrome-ux-report" class="anchor-link">Chrome UX Report</a></h3>
 
       <p>
         Le <a href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UX Report</a> est un jeu de données publiques sur les expériences réelles des utilisateurs de Chrome. Les expériences sont regroupées selon l’origine des sites Web, par exemple <code>https://www.example.com</code>. Le jeu de données permet d’accéder à la distribution des expériences utilisateur relatives au rendu, au chargement, aux interactions et la stabilité de la disposition des éléments dans la page. En plus du regroupement par mois, les expériences peuvent également être découpées par dimensions comme la géographie du pays, le type de matériel  (ordinateur de bureau, téléphone, tablette) et le type de connexion utilisé (4G, 3G, etc.).
@@ -335,7 +335,7 @@
     </section>
 
     <section>
-      <h3 id="third-party-web">Third Party Web</h3>
+      <h3 id="third-party-web"><a href="#third-party-web" class="anchor-link">Third Party Web</a></h3>
 
       <p>
         <a href="https://www.thirdpartyweb.today/">Third Party Web</a> est un projet de recherche de <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur du chapitre sur les <a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">Tierces Parties</a>, qui utilise les données de HTTP Archive et Lighthouse pour identifier et analyser l’impact des ressources tierces sur le Web.
@@ -351,7 +351,7 @@
     </section>
 
     <section>
-      <h3 id="rework-css">Rework CSS</h3>
+      <h3 id="rework-css"><a href="#rework-css" class="anchor-link">Rework CSS</a></h3>
 
       <p>
         <a href="https://github.com/reworkcss/css">Rework CSS</a> est un analyseur CSS basé sur JavaScript. Il prend en entrées des feuilles de style entières et produit un objet JSON identifiant chaque règle de style, sélecteur, directive et valeur.
@@ -363,7 +363,7 @@
     </section>
 
     <section>
-      <h2 id="process">Processus analytique</h2>
+      <h2 id="process"><a href="#process" class="anchor-link">Processus analytique</a></h2>
 
       <p>
         La planification et l’exécution du Web Almanac ont pris environ un an,  avec la coordination de dizaines de contributeurs de la communauté Web.  Cette section décrit pourquoi nous avons choisi les indicateurs que vous voyez dans le Web Almanac, comment ils ont été consultés et interprétés.
@@ -371,7 +371,7 @@
     </section>
 
     <section>
-      <h3 id="brainstorming">Réflexion préalable</h3>
+      <h3 id="brainstorming"><a href="#brainstorming" class="anchor-link">Réflexion préalable</a></h3>
 
       <p>
         L’idée du Web Almanac en né en janvier 2019 sous la forme d’une <a href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">publication sur le forum HTTP Archive</a> décrivant l’initiative et appelant aux soutiens. En mars 2019, nous avons créé un <a href="http://bit.ly/web-almanac-brainstorm">document public de réflexion</a> dans lequel n’importe qui dans la communauté web pourrait écrire des idées pour des chapitres ou des métriques. Il s’agissait d’une étape cruciale pour s’assurer que nous nous concentrions sur les choses qui comptent pour la collectivité et que nous incluions un ensemble diversifié de voix dans le processus.
@@ -387,7 +387,7 @@
     </section>
 
     <section>
-      <h3 id="analysis">Analyse</h3>
+      <h3 id="analysis"><a href="#analysis" class="anchor-link">Analyse</a></h3>
 
       <p>
         En juin 2019, une fois obtenue la liste finale des paramètres et chapitres, des analystes ont trié les indicateurs en fonction de leur difficulté d’obtention. Dans certains cas, <a href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">des indicateurs personnalisés</a> devaient être créés pour combler les lacunes de nos capacités analytiques.
@@ -403,7 +403,7 @@
     </section>
 
     <section>
-      <h3 id="interpretation">Interprétation</h3>
+      <h3 id="interpretation"><a href="#interpretation" class="anchor-link">Interprétation</a></h3>
 
       <p>
         Les auteurs et autrices ont travaillé avec les analystes pour interpréter correctement les résultats et tirer les conclusions appropriées. Au fur et à mesure que ces personnes ont rédigé leurs chapitres respectifs, elles ont puisé dans ces statistiques pour étayer leur analyse de l’état du Web. Leurs confrères et consœurs chargés de la relecture ont travaillé avec elles pour s’assurer de l’exactitude technique de leur analyse.
@@ -419,7 +419,7 @@
     </section>
 
     <section>
-      <h2 id="looking-ahead">Perspectives</h2>
+      <h2 id="looking-ahead"><a href="#looking-ahead" class="anchor-link">Perspectives</a></h2>
 
       <p>
         L’édition 2019 du Web Almanac est la première de ce que nous espérons  être une tradition annuelle d’introspection et d’investissement positif au sein de la communauté Web. Parvenir à ce résultat a demandé un effort monumental de la part de nombreux <a href="{{ url_for('contributors', year=year, lang=lang) }}">contributeurs et contributrices</a> et nous espérons pouvoir grandement tirer parti de ce travail pour faciliter les éditions futures.
