--- a/src/templates/base/2019/base_chapter.html
+++ b/src/templates/base/2019/base_chapter.html
@@ -60,17 +60,15 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 
 {# Calls to action for readers who want to engage more with this chapter. #}
 {% macro render_actions() %}
-  <div class="chapter_links">
-    <a class="alt btn" href="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}">
-      <img src="/static/images/discuss.png" alt="{{ self.discuss_this_chapter() }}" height="24" width="24" loading="lazy" /><span id="num_comments"></span> <span data-translation id="comment-singular">{{ self.comment() }}</span><span data-translation id="comment-plural">{{ self.comments() }}</span>
-    </a>
-    <a class="alt btn" href="{{ metadata.get('results') }}/">
-      <img src="/static/images/results.png" alt="" height="24" width="24" loading="lazy" />{{ self.results() }}
-    </a>
-    <a class="alt btn" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/{{ year }}/{{ metadata.get('queries')  }}/">
-      <img src="/static/images/queries.png" alt="" height="24" width="24" loading="lazy" />{{ self.queries() }}
-    </a>
-  </div>
+  <a class="alt btn" href="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}">
+    <img src="/static/images/discuss.png" alt="{{ self.discuss_this_chapter() }}" height="24" width="24" loading="lazy" /><span id="num_comments"></span> <span data-translation id="comment-singular">{{ self.comment() }}</span><span data-translation id="comment-plural">{{ self.comments() }}</span>
+  </a>
+  <a class="alt btn" href="{{ metadata.get('results') }}/">
+    <img src="/static/images/results.png" alt="" height="24" width="24" loading="lazy" />{{ self.results() }}
+  </a>
+  <a class="alt btn" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/{{ year }}/{{ metadata.get('queries')  }}/">
+    <img src="/static/images/queries.png" alt="" height="24" width="24" loading="lazy" />{{ self.queries() }}
+  </a>
 {% endmacro %}
 
 
@@ -101,8 +99,12 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 
 {% macro render_authors() %}
   {% for author in metadata.get('authors') %}
-  {% if loop.length == 1 %}<h2>{{ self.author() }}</h2>{% endif -%}
-  {% if loop.length > 1 and loop.index == 1 %}<h2>{{ self.authors() }}</h2>{% endif %}
+  <h2 id="authors">
+    <a href="#authors" class="anchor-link">
+    {% if loop.length == 1 %}{{ self.author() }}{% endif -%}
+    {% if loop.length > 1 and loop.index == 1 %}{{ self.authors() }}{% endif %}
+    </a>
+  </h2>
   {% if loop.index == 1 %}<ul>{% endif %}
       {% set authordata = config.contributors[author] if author in config.contributors else None %}
     {% if authordata %}
@@ -244,7 +246,9 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
             {{ render_byline() }}
             {{ self.main_content() }}
         </article>
-        {{ render_actions() }}
+        <section class="chapter_links">
+            {{ render_actions() }}
+        </section>
         <section class="authors">
             {{ render_authors() }}
         </section>
