--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -53,7 +53,7 @@
           <source type="image/jpeg" srcset="/static/images/methodology-banner-sm.png" />
           <img src="/static/images/methodology-banner.png" class="content-banner" alt="" width="1200" height="984" loading="eager" />
         </picture>
-        <h2 id="overview">Overview</h2>
+        <h2 id="overview"><a href="#overview" class="anchor-link">Overview</a></h2>
 
         <p>
           The Web Almanac is a project organized by <a href="https://httparchive.org">HTTP Archive</a>. HTTP Archive was started in 2010 by Steve Souders with the mission to track how the web is built. It evaluates the composition of millions of web pages on a monthly basis and makes its terabytes of metadata available for analysis on <a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>. Learn more <a href="https://httparchive.org/about">about HTTP Archive</a>.
@@ -69,7 +69,7 @@
     </section>
 
     <section>
-        <h2 id="dataset">About the dataset</h2>
+        <h2 id="dataset"><a href="#dataset" class="anchor-link">About the dataset</a></h2>
 
         <p>
           The HTTP Archive dataset is continuously updating with new data monthly. For the 2019 edition of the Web Almanac, unless otherwise noted in the chapter, all metrics were sourced from the July 2019 crawl. These results are <a href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">publicly queryable</a> on BigQuery in tables prefixed with <code>2019_07_01</code>.
@@ -111,7 +111,7 @@
     </section>
 
     <section>
-        <h3 id="websites">Websites</h3>
+        <h3 id="websites"><a href="#websites" class="anchor-link">Websites</a></h3>
 
         <p>
           There are 5,790,700 websites in the dataset. Among those, 5,297,442 are mobile websites and 4,371,973 are desktop websites. Most websites are included in both the mobile and desktop subsets.
@@ -135,7 +135,7 @@
     </section>
 
     <section>
-      <h3 id="metrics">Metrics</h3>
+      <h3 id="metrics"><a href="#metrics" class="anchor-link">Metrics</a></h3>
 
       <p>
         HTTP Archive collects metrics about how the web is built. It includes basic metrics like the number of bytes per page, whether the page was loaded over HTTPS, and individual request and response headers. The majority of these metrics are provided by <a href="#webpagetest">WebPageTest</a>, which acts as the test runner for each website.
@@ -159,7 +159,7 @@
     </section>
 
     <section>
-      <h2 id="tools">Tools</h2>
+      <h2 id="tools"><a href="#tools" class="anchor-link">Tools</a></h2>
 
       <p>
         The Web Almanac is made possible with the help of the following open source tools.
@@ -167,7 +167,7 @@
     </section>
 
     <section>
-      <h3 id="webpagetest">WebPageTest</h3>
+      <h3 id="webpagetest"><a href="#webpagetest" class="anchor-link">WebPageTest</a></h3>
 
       <p>
         <a href="https://www.webpagetest.org/">WebPageTest</a> is a prominent web performance testing tool and the backbone of HTTP Archive. We use a <a href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">private instance</a> of WebPageTest with private test agents, which are the actual browsers that test each web page. Desktop and mobile websites are tested under different configurations:
@@ -247,7 +247,7 @@
     </section>
 
     <section>
-      <h3 id="lighthouse">Lighthouse</h3>
+      <h3 id="lighthouse"><a href="#lighthouse" class="anchor-link">Lighthouse</a></h3>
 
       <p>
         <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a> is an automated website quality assurance tool built by Google. It audits web pages to make sure they don't include user experience antipatterns like unoptimized images and inaccessible content.
@@ -299,7 +299,7 @@
     </section>
 
     <section>
-      <h3 id="wappalyzer">Wappalyzer</h3>
+      <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
         <a href="https://www.wappalyzer.com/">Wappalyzer</a> is a tool for detecting technologies used by web pages. There are <a href="https://www.wappalyzer.com/technologies">65 categories</a> of technologies tested, ranging from JavaScript frameworks, to CMS platforms, and even cryptocurrency miners. There are over 1,200 supported technologies.
@@ -319,7 +319,7 @@
     </section>
 
     <section>
-      <h3 id="chrome-ux-report">Chrome UX Report</h3>
+      <h3 id="chrome-ux-report"><a href="#chrome-ux-report" class="anchor-link">Chrome UX Report</a></h3>
 
       <p>
         The <a href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UX Report</a> is a public dataset of real-world Chrome user experiences. Experiences are grouped by websites' origin, for example <code>https://www.example.com</code>. The dataset includes distributions of UX metrics like paint, load, interaction, and layout stability. In addition to grouping by month, experiences may also be sliced by dimensions like country-level geography, form factor (desktop, phone, tablet), and effective connection type (4G, 3G, etc.).
@@ -335,7 +335,7 @@
     </section>
 
     <section>
-      <h3 id="third-party-web">Third Party Web</h3>
+      <h3 id="third-party-web"><a href="#third-party-web">Third Party Web</a></h3>
 
       <p>
         <a href="https://www.thirdpartyweb.today/">Third Party Web</a> is a research project by <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, author of the <a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">Third Parties</a> chapter, that uses HTTP Archive and Lighthouse data to identify and analyze the impact of third party resources on the web.
@@ -351,7 +351,7 @@
     </section>
 
     <section>
-      <h3 id="rework-css">Rework CSS</h3>
+      <h3 id="rework-css"><a href="#rework-css" class="anchor-link">Rework CSS</a></h3>
 
       <p>
         <a href="https://github.com/reworkcss/css">Rework CSS</a> is a JavaScript-based CSS parser. It takes entire stylesheets and produces a JSON-encoded object distinguishing each individual style rule, selector, directive, and value.
@@ -363,7 +363,7 @@
     </section>
 
     <section>
-      <h2 id="process">Analytical process</h2>
+      <h2 id="process"><a href="#process" class="anchor-link">Analytical process</a></h2>
 
       <p>
         The Web Almanac took about a year to plan and execute with the coordination of dozens of contributors from the web community. This section describes why we chose the metrics you see in the Web Almanac, how they were queried, and interpreted.
@@ -371,7 +371,7 @@
     </section>
 
     <section>
-      <h3 id="brainstorming">Brainstorming</h3>
+      <h3 id="brainstorming"><a href="#brainstorming" class="anchor-link">Brainstorming</a></h3>
 
       <p>
         The inception of the Web Almanac started in January 2019 as a <a href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">post on the HTTP Archive forum</a> describing the initiative and gathering support. In March 2019 we created a <a href="http://bit.ly/web-almanac-brainstorm">public brainstorming doc</a> in which anyone in the web community could write-in ideas for chapters or metrics. This was a critical step to ensure we were focusing on things that matter to the community and have a diverse set of voices included in the process.
@@ -387,7 +387,7 @@
     </section>
 
     <section>
-      <h3 id="analysis">Analysis</h3>
+      <h3 id="analysis"><a href="#analysis" class="anchor-link">Analysis</a></h3>
 
       <p>
         In June 2019, with the stable list of metrics and chapters, data analysts triaged the metrics for feasibility. In some cases, <a href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">custom metrics</a> needed to be created to fill gaps in our analytic capabilities.
@@ -403,7 +403,7 @@
     </section>
 
     <section>
-      <h3 id="interpretation">Interpretation</h3>
+      <h3 id="interpretation"><a href="#interpretation" class="anchor-link">Interpretation</a></h3>
 
       <p>
         Authors worked with analysts to correctly interpret the results and draw appropriate conclusions. As authors wrote their respective chapters, they drew from these statistics to support their framing of the state of the web. Peer reviewers worked with authors to ensure the technical correctness of their analysis.
@@ -419,7 +419,7 @@
     </section>
 
     <section>
-      <h2 id="looking-ahead">Looking ahead</h2>
+      <h2 id="looking-ahead"><a href="#looking-ahead" class="anchor-link">Looking ahead</a></h2>
 
       <p>
         The 2019 edition of the Web Almanac is the first of what we hope to be an annual tradition in the web community of introspection and a commitment to positive change. Getting to this point has been a monumental effort thanks to many dedicated <a href="{{ url_for('contributors', year=year, lang=lang) }}">contributors</a> and we hope to leverage as much of this work as possible to make future editions even more streamlined.
