Fix errors in Japanese featured chapters and enable ecommerce (#749)

--- a/src/templates/ja/2019/featured_chapters.html
+++ b/src/templates/ja/2019/featured_chapters.html
@@ -1,4 +1,4 @@
-{%- set featured_chapter = ("http2","http2") | random %}
+{%- set featured_chapter = ("ecommerce","http2") | random %}
 {#
   Below is the full set of chapters. If all are translated then replace above line with this one.
   Other than add chapters to above first line as they are translated (min of two chapters so repeat if only one chapter)
@@ -55,7 +55,7 @@
 {%- elif featured_chapter == "ecommerce" %}
   {%- set featured_chapter_name = "Eコマース" %}
   {%- set featured_chapter_quote = "この調査では、ホームページの10%近くがeコマース・プラットフォーム上にあることが判明しました。<em>eコマースプラットフォーム</em> は、オンラインストアを作成して運営することを可能にするソフトウェア ソフトウェアまたはサービスのセットです。Shopifyなどの有料サービス、Magentoオープンソースなどのソフトウェアプラットフォーム、およびMagento Commerceなどのホスト型プラットフォームなどが含まれます。" %}
-  {%- set featured_chapter_stats = {"統計1":"3.98%","ラベル1":"WooCommerceを使用してサイト最も人気のあるEコマースプラットフォーム","統計2":"116","ラベル2":"検出されたEコマースプラットフォームの数","統計3":"1,517 KB","ラベル3":"モバイルEコマースページあたりの画像バイト数の中央値。"} %}
+  {%- set featured_chapter_stats = {"stat1":"3.98%","label1":"WooCommerceを使用してサイト最も人気のあるEコマースプラットフォーム","stat2":"116","label2":"検出されたEコマースプラットフォームの数","stat3":"1,517 KB","label3":"モバイルEコマースページあたりの画像バイト数の中央値。"} %}
 {%- elif featured_chapter == "cms" %}
   {%- set featured_chapter_name = "CMS" %}
   {%- set featured_chapter_quote = "The general term Content Management System (CMS) refers to systems enabling individuals and organizations to create, manage, and publish content. A CMS for web content, specifically, is a system aimed at creating, managing, and publishing content to be consumed and experienced via the open web. Each CMS implements some subset of a wide range of content management capabilities and the corresponding mechanisms for users to build websites easily and effectively around their content." %}
