--- a/src/templates/ja/2019/base_chapter.html
+++ b/src/templates/ja/2019/base_chapter.html
@@ -1,16 +1,16 @@
 {% extends "base/2019/base_chapter.html" %}
 
-{% block title %}{{ metadata.get('title') }} | 2019 | HTTP ArchiveによるWeb年鑑{% endblock %}
+{% block title %}{{ metadata.get('title') }} | 2019 | HTTP ArchiveによるWeb Almanac{% endblock %}
 
-{% block description %}{{ metadata.get('description',metadata.get('title') + ' chapter of the ' + year + ' Web Almanac probing into the use of ' + metadata.get('description',metadata.get('title')) + ' on the web.') }}{% endblock %}
+{% block description %}{{ metadata.get('description',metadata.get('title') + ' の章 ' + year + ' Web Almanacの使用状況を調べる ' + metadata.get('description',metadata.get('title')) + ' をウェブ上で公開しています。') }}{% endblock %}
 
-{% block twitter_image_alt %}Chapter image for the {{ metadata.get('title') }} chapter of the {{ year }} Web Almanac{% endblock %}
+{% block twitter_image_alt %}のチャプター画像 {{ metadata.get('title') }} の章 {{ year }} Web Almanac{% endblock %}
 
 {% block breadcrumb_name_2 %}{{ metadata.get('title') }}{% endblock %}
 
 {% block unedited %}[未編集]{% endblock %}
 
-{% block prev_next_title %}Previous and next chapter navigation{% endblock %}
+{% block prev_next_title %}前後の章のナビゲーション{% endblock %}
 
 {% block discuss_this_chapter %}この章について話し合う{% endblock %}
 {% block comment %}コメント{% endblock %}
