--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -51,7 +51,7 @@
 {% macro edition(year) %}{{ year }} 版{% endmacro %}
 
 {% block footer_title %}フッターナビゲーション{% endblock %}
-{% block copyright %}© 2019 Web Almanac. Licensed under <a href=\"https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}アクセシビリティに関する声明{% endblock %}
 
 {% 
