Don't translate Web Almanac and HTTP Archive (#758)
* Don't translate Web Almanac and HTTP Archive

* fix review

--- a/src/templates/ja/2019/contributors.html
+++ b/src/templates/ja/2019/contributors.html
@@ -1,6 +1,6 @@
 {% extends "base/2019/contributors.html" %}
 
-{% block title %}2019 貢献者 | HTTP ArchiveによるWeb年鑑{% endblock %}
+{% block title %}2019 貢献者 | HTTP ArchiveによるWeb Almanac{% endblock %}
 
 {% block description %}The {{ config.contributors.items() | length }} people who contributed to the 2019 Web Almanac as Analysts, Authors, Brainstormers, Designers, Developers, Editors, Reviewers and Translators.{% endblock %}
 
