--- a/src/templates/ja/2019/index.html
+++ b/src/templates/ja/2019/index.html
@@ -14,11 +14,11 @@
 {% block intro_sub_title %}HTTP Archiveの年次報告書<br> <b>ウェブの状態</b>レポート{% endblock %}
 
 {% block mission %}
-私たちの使命は、HTTPアーカイブの生の統計やトレンドを、ウェブコミュニティの専門知識と組み合わせることです。Web年鑑は、実際のデータと信頼できるウェブの専門家に裏付けられた、ウェブの状態に関する包括的なレポートです。ページコンテンツ、ユーザー体験、パブリッシング、配布などの側面を網羅した20の章で構成されています。
+私たちの使命は、HTTP Archiveの生の統計やトレンドを、ウェブコミュニティの専門知識と組み合わせることです。Web Almanacは、実際のデータと信頼できるウェブの専門家に裏付けられた、ウェブの状態に関する包括的なレポートです。ページコンテンツ、ユーザー体験、パブリッシング、配布などの側面を網羅した20の章で構成されています。
 {% endblock %}
 
 {% block contributors_description %}
-Web年鑑は、ウェブ・コミュニティの努力によって実現しています。{{ self.contributors() }}人々は、企画、調査、執筆、制作の段階で数え切れないほどの時間をボランティアで費やしてきました。
+Web Almanacは、ウェブ・コミュニティの努力によって実現しています。{{ self.contributors() }}人々は、企画、調査、執筆、制作の段階で数え切れないほどの時間をボランティアで費やしてきました。
 {% endblock %}
 {% block contributors_link %}投稿者を見る{% endblock %}
 
