--- a/src/templates/ja/2019/splash.html
+++ b/src/templates/ja/2019/splash.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-HTTP ArchiveによるWeb年鑑
+HTTP ArchiveによるWeb Almanac
 {% endblock %}
 
 {% block styles %}
@@ -15,11 +15,11 @@ HTTP ArchiveによるWeb年鑑
     <img src="/static/images/ha.png" alt="HTTP Archive">
 
     <h1>
-      2019年11月に発表予定の<b>Web年鑑</b>をご紹介します。
+      2019年11月に発表予定の<b>Web Almanac</b>をご紹介します。
     </h1>
 
     <p>
-      Web年鑑はHTTP Archiveによる「Webの現状」の年次報告書です。
+      Web AlmanacはHTTP Archiveによる「Webの現状」の年次報告書です。
       私たちの使命は、HTTP Archiveの強力な分析とWebコミュニティの専門知識を組み合わせることです。
       年鑑は、ページコンテンツ、ユーザーエクスペリエンス、コンテンツの配付、コンテンツの配布といった4つの主要セクションで構成されています。
       さらに各セクションは、JavaScriptの使用方法、アクセシビリティ、コンテンツマネジメントシステム、および圧縮などの特定の分野の状況を調査するチャプターで構成されています。
