--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -1,8 +1,8 @@
 {% extends "base/2019/base.html" %}
 
-{% block description %}Web年鑑は、Webコミュニティの専門知識とHTTPアーカイブのデータやトレンドを組み合わせた、毎年恒例のWeb状況のレポートです。{% endblock %}
+{% block description %}Web Almanacは、Webコミュニティの専門知識とHTTP Archiveのデータやトレンドを組み合わせた、毎年恒例のWeb状況のレポートです。{% endblock %}
 
-{% block twitter_image_alt %}{{ year }} Web年鑑{% endblock %}
+{% block twitter_image_alt %}{{ year }} Web Almanac{% endblock %}
 
 {% block date_published %}2019-11-04T12:00:00+00:00:00{% endblock %}
 {% block date_modified %}2019-11-04T12:00:00+00:00:00{% endblock %}
@@ -12,9 +12,9 @@
 
 {% block skip_navigation %}ナビゲーションをスキップ{% endblock %}
 
-{% block organization %}HTTP ArchiveによるWeb年鑑{% endblock %}
+{% block organization %}HTTP ArchiveによるWeb Almanac{% endblock %}
 
-{% block http_archive_link %}HTTP ArchiveによるWeb年鑑{% endblock %}
+{% block http_archive_link %}HTTP ArchiveによるWeb Almanac{% endblock %}
 
 {% block page_navigation %}ページナビゲーション{% endblock %}
 
